--- a/public/index.html
+++ b/public/index.html
@@ -3,27 +3,394 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Tortas Ahogadas</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TortaExpress - Tortas Ahogadas Gourmet</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(135deg, #ff6b35, #f7931e, #ff6b35);
+            min-height: 100vh;
+            color: #333;
+        }
+
+        .container {
+            max-width: 400px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        /* Header */
+        .header {
+            text-align: center;
+            margin-bottom: 30px;
+            animation: fadeInDown 1s ease-out;
+        }
+
+        .logo {
+            font-size: 2.5em;
+            font-weight: bold;
+            color: white;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+            margin-bottom: 5px;
+        }
+
+        .tagline {
+            color: rgba(255, 255, 255, 0.9);
+            font-size: 1.1em;
+            font-weight: 300;
+        }
+
+        /* Product Card */
+        .product-card {
+            background: white;
+            border-radius: 25px;
+            padding: 25px;
+            margin: 20px 0;
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
+            animation: fadeInUp 1s ease-out 0.3s both;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .product-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 5px;
+            background: linear-gradient(90deg, #ff6b35, #f7931e);
+        }
+
+        .product-image {
+            width: 100%;
+            height: 200px;
+            background: linear-gradient(45deg, #ff6b35, #f7931e);
+            border-radius: 20px;
+            margin-bottom: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 4em;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .product-image::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="20" cy="20" r="2" fill="rgba(255,255,255,0.1)"/><circle cx="80" cy="40" r="3" fill="rgba(255,255,255,0.1)"/><circle cx="40" cy="80" r="2" fill="rgba(255,255,255,0.1)"/></svg>');
+        }
+
+        .product-title {
+            font-size: 1.8em;
+            font-weight: bold;
+            color: #333;
+            margin-bottom: 10px;
+            text-align: center;
+        }
+
+        .product-description {
+            color: #666;
+            text-align: center;
+            margin-bottom: 20px;
+            line-height: 1.6;
+        }
+
+        .price-section {
+            text-align: center;
+            margin: 25px 0;
+        }
+
+        .price {
+            font-size: 2.5em;
+            font-weight: bold;
+            color: #ff6b35;
+            margin-bottom: 5px;
+        }
+
+        .price-label {
+            color: #888;
+            font-size: 0.9em;
+        }
+
+        /* Features */
+        .features {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 15px;
+            margin: 20px 0;
+        }
+
+        .feature {
+            text-align: center;
+            padding: 15px 10px;
+            background: #f8f9fa;
+            border-radius: 15px;
+        }
+
+        .feature-icon {
+            font-size: 1.5em;
+            margin-bottom: 8px;
+        }
+
+        .feature-text {
+            font-size: 0.9em;
+            color: #666;
+        }
+
+        /* Buy Button */
+        .buy-button {
+            width: 100%;
+            padding: 18px;
+            background: linear-gradient(45deg, #ff6b35, #f7931e);
+            color: white;
+            border: none;
+            border-radius: 50px;
+            font-size: 1.2em;
+            font-weight: bold;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            box-shadow: 0 10px 30px rgba(255, 107, 53, 0.3);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .buy-button:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 15px 40px rgba(255, 107, 53, 0.4);
+        }
+
+        .buy-button:active {
+            transform: translateY(0);
+        }
+
+        .buy-button::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
+            transition: left 0.5s;
+        }
+
+        .buy-button:hover::before {
+            left: 100%;
+        }
+
+        /* Footer */
+        .footer {
+            text-align: center;
+            margin-top: 30px;
+            padding: 20px;
+            color: rgba(255, 255, 255, 0.8);
+        }
+
+        .security-badge {
+            display: inline-flex;
+            align-items: center;
+            background: rgba(255, 255, 255, 0.1);
+            padding: 8px 15px;
+            border-radius: 20px;
+            margin-top: 15px;
+            font-size: 0.9em;
+        }
+
+        /* Animations */
+        @keyframes fadeInDown {
+            from {
+                opacity: 0;
+                transform: translateY(-30px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(30px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes pulse {
+
+            0%,
+            100% {
+                transform: scale(1);
+            }
+
+            50% {
+                transform: scale(1.05);
+            }
+        }
+
+        /* Loading state */
+        .loading {
+            opacity: 0.7;
+            pointer-events: none;
+        }
+
+        .loading .buy-button {
+            background: #ccc;
+            animation: pulse 1.5s infinite;
+        }
+
+        /* Mobile optimizations */
+        @media (max-width: 480px) {
+            .container {
+                padding: 15px;
+            }
+
+            .logo {
+                font-size: 2em;
+            }
+
+            .price {
+                font-size: 2em;
+            }
+        }
+
+        /* Responsive design for larger screens */
+        @media (min-width: 401px) {
+            .container {
+                max-width: 500px;
+            }
+        }
+    </style>
 </head>
 
 <body>
-    <h1>Compra tu Torta Ahogada</h1>
-    <button id="comprar">Comprar</button>
+    <div class="container">
+        <!-- Header -->
+        <div class="header">
+            <div class="logo">🌮 TortaExpress</div>
+            <div class="tagline">Tortas Ahogadas Gourmet</div>
+        </div>
+
+        <!-- Product Card -->
+        <div class="product-card">
+            <div class="product-image">
+                🥪🔥
+            </div>
+
+            <div class="product-title">Torta Ahogada Tradicional</div>
+            <div class="product-description">
+                Deliciosa torta artesanal bañada en nuestra salsa especial de chile rojo,
+                con ingredientes frescos y el auténtico sabor tapatío que tanto te gusta.
+            </div>
+
+            <div class="features">
+                <div class="feature">
+                    <div class="feature-icon">🔥</div>
+                    <div class="feature-text">Salsa Picante<br>Especial</div>
+                </div>
+                <div class="feature">
+                    <div class="feature-icon">🥬</div>
+                    <div class="feature-text">Ingredientes<br>Frescos</div>
+                </div>
+                <div class="feature">
+                    <div class="feature-icon">⚡</div>
+                    <div class="feature-text">Entrega<br>Rápida</div>
+                </div>
+                <div class="feature">
+                    <div class="feature-icon">✨</div>
+                    <div class="feature-text">Receta<br>Artesanal</div>
+                </div>
+            </div>
+
+            <div class="price-section">
+                <div class="price">$50</div>
+                <div class="price-label">Pesos Mexicanos</div>
+            </div>
+
+            <button id="comprar" class="buy-button">
+                🛒 Ordenar Ahora - Pago Seguro
+            </button>
+        </div>
+
+        <!-- Footer -->
+        <div class="footer">
+            <div>🔒 Pago 100% Seguro con Stripe</div>
+            <div class="security-badge">
+                🛡️ SSL Certificado
+            </div>
+        </div>
+    </div>
 
     <script>
         document.getElementById("comprar").addEventListener("click", async () => {
+            const button = document.getElementById("comprar");
+            const originalText = button.innerHTML;
+
+            // Loading state
+            button.innerHTML = "⏳ Procesando...";
+            button.disabled = true;
+            document.body.classList.add("loading");
+
             try {
                 const resp = await fetch("/checkout", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({}) // aunque esté vacío
+                    body: JSON.stringify({})
                 });
+
+                if (!resp.ok) {
+                    throw new Error('Network response was not ok');
+                }
+
                 const data = await resp.json();
-                window.location.href = data.url; // Redirige a Stripe Checkout
+                window.location.href = data.url;
+
             } catch (err) {
                 console.error("Error al iniciar el pago:", err);
-                alert("Ocurrió un error al procesar el pago.");
+                alert("😔 Hubo un problema al procesar tu pedido. Por favor intenta de nuevo.");
+
+                // Reset button
+                button.innerHTML = originalText;
+                button.disabled = false;
+                document.body.classList.remove("loading");
             }
+        });
+
+        // Add some interactive touches
+        document.addEventListener('DOMContentLoaded', function () {
+            // Animate elements on scroll/load
+            const elements = document.querySelectorAll('.product-card, .header');
+            elements.forEach(el => {
+                el.style.opacity = '0';
+                el.style.transform = 'translateY(20px)';
+            });
+
+            setTimeout(() => {
+                elements.forEach((el, index) => {
+                    setTimeout(() => {
+                        el.style.transition = 'all 0.6s ease';
+                        el.style.opacity = '1';
+                        el.style.transform = 'translateY(0)';
+                    }, index * 200);
+                });
+            }, 100);
         });
     </script>
 </body>
